fixtures/cs-rng-01/good/auth-named-but-secure.ts
import crypto from "crypto";

export function generateToken() {
	return crypto.randomBytes(16);
}
