fixtures/cs-rng-01/bad/math-random-default-param.ts
export function generateToken(seed = Math.random()) {
	return seed.toString(36);
}
